--- a/products.html
+++ b/products.html
@@ -30,7 +30,7 @@
             Dropdown
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="index.html">Back to Home</a></li>
+            <li><a class="dropdown-item" href="index.html">Home</a></li>
             <li><a class="dropdown-item" href="products.html">Products</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -51,8 +51,8 @@
     <h1>Hello, World!</h1>
 
     <div class="container-fluid">
-      <h1>This is a heading</h1>
-      <p>This is a paragraph of text.</p>
+      <h1>Welcome to the Products page!</h1>
+      <p>This is still under construction.</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
