Testing Navbar Containers

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>The VR Center!</title>
   </head>
   <body>
-    <div class="container-fluid" id="navbar"></div>
+    <div id="navbar"></div>
 
     <h1>Hello, World!</h1>
 
