--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <title>The VR Center!</title>
   </head>
   <body>
-    <div id="navbar"></div>
+    <div id="navbar">
+        <a class="nav-link active" current-page="index.html" href="index.html">Home</a>
+    </div>
 
     <h1>Hello, World!</h1>
 
