--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <title>The VR Center!</title>
   </head>
   <body>
-    <div id="navbar">
-        <a class="nav-link active" current-page="index.html" href="index.html">Home</a>
-    </div>
+    <div id="navbar"></div>
 
     <h1>Hello, World!</h1>
 
