--- a/products.html
+++ b/products.html
@@ -15,17 +15,20 @@
   <body>
     <div id="navbar"></div>
 
-    <h1>Hello, World!</h1>
+    <h1>These are products!</h1>
 
     <div class="container-fluid">
       <h1>Welcome to the Products page!</h1>
       <p>This is still under construction.</p>
     </div>
 
+    <div id="footbar"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript">
       $(function(){
         $("#navbar").load("navbar.html");
+        $("#footbar").load("footbar.html")
       });
     </script>
   </body>
