--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
   <body>
     <div id="navbar"></div>
 
-    <h1>Hello, World!</h1>
+    <h1>This is the Homepage!</h1>
 
     <div class="container-fluid">
       <h1>This is a heading</h1>
       <p>This is a paragraph of text.</p>
     </div>
-
 
     <div id="footbar"></div>
 
@@ -32,6 +31,5 @@
         $("#footbar").load("footbar.html")
       });
     </script>
-
   </body>
 </html>
