Testing spacing/padding and the nav/foot bars

--- a/footbar.html
+++ b/footbar.html
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3 bg-dark">
-  <div class="container-fluid">
+  <div class="container">
     <span class="text-muted">Contact Us!</span>
   </div>
 </footer>
