--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 
     <h1>This is the Homepage!</h1>
 
-    <div class="container-fluid">
-      <h1>This is a heading</h1>
-      <p>This is a paragraph of text.</p>
-    </div>
+    <main class="flex-shrink-0">
+        <div class="container">
+          <h1 class="mt-5">This is a heading</h1>
+          <p class="lead">This is a paragraph of text.</p>
+        </div>        
+    </main>
 
     <div id="footbar"></div>
 
