--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>The VR Center!</title>
   </head>
   <body>
-    <div id="navbar"></div>
+    <div class="container" id="navbar"></div>
 
     <h1>This is the Homepage!</h1>
 
@@ -24,7 +24,7 @@
         </div>        
     </main>
 
-    <div id="footbar"></div>
+    <div class="container" id="footbar"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript">
