--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       $(function(){
         $("#navbar").load("navbar.html");
         $("#footbar").load("footbar.html")
+        active-page="products.html" = Findbyelement.document("navproducts")
       });
     </script>
   </body>
