--- a/products.html
+++ b/products.html
@@ -13,7 +13,26 @@
     <title>The VR Center!</title>
   </head>
   <body>
-    <div id="navbar"></div>
+    <div id="navbar">
+        <nav class="navbar navbar-pills navbar-expand-lg navbar-dark fixed-top bg-dark">
+          <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Logo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" id="navindex" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" id="navproducts" href="products.html">Products</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+    </div>
 
     <h1>These are products!</h1>
 
@@ -27,7 +46,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript">
       $(function(){
-        $("#navbar").load("navbar.html");
         $("#footbar").load("footbar.html")
       });
     </script>
