--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="preload" href="navbar.html" as="document">
-    <link rel="preload" href="footer.html" as="document">
-
+    
 
     <title>The VR Center!</title>
   </head>
@@ -30,6 +28,24 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" id="navproducts" href="products.html">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navservices" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navevents" href="events.html">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navgames" href="games.html">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navfaq" href="faq.html">FAQ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navprices" href="prices.html">Prices</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navhours" href="hours.html">Hours</a>
             </li>
           </ul>
         </div>
