--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
 
-    <title>The VR Center!</title>
+    <title>The VR Center</title>
   </head>
   <body>
     <div class="container" id="navbar">
@@ -36,7 +36,7 @@
               <a class="nav-link" id="navevents" href="events.html">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="navgames" href="games.html">Products</a>
+              <a class="nav-link" id="navgames" href="games.html">Games</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="navfaq" href="faq.html">FAQ</a>
