--- a/products.html
+++ b/products.html
@@ -28,6 +28,24 @@
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" id="navproducts" href="products.html">Products</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="navservices" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="navevents" href="events.html">Events</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="navgames" href="games.html">Games</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="navfaq" href="faq.html">FAQ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="navprices" href="prices.html">Prices</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="navhours" href="hours.html">Hours</a>
+                </li>
               </ul>
             </div>
           </div>
