--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
 
-    <title>The VR Center</title>
+    <title>The VR Center!</title>
   </head>
   <body>
     <div class="container" id="navbar">
