--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-          <h1 class="mt-5">This is a heading</h1>
-          <p class="lead">This is a paragraph of text.</p>
+          <h1 class="mt-5">This is the homepade</h1>
+          <p class="lead">This is still a work in progress.</p>
         </div>        
     </main>
 
