--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-          <h1 class="mt-5">This is the homepade</h1>
+          <h1 class="mt-5">This is the homepage</h1>
           <p class="lead">This is still a work in progress.</p>
         </div>        
     </main>
