--- a/events.html
+++ b/events.html
@@ -55,14 +55,12 @@
 
     <h1>This is the Events Page!</h1>
 
-    <main class="flex-shrink-0">
-        <div class="container">
-          <h1 class="mt-5">This is the events page</h1>
-          <p class="lead">This is still a work in progress.</p>
-        </div>        
-    </main>
+    <div class="container-fluid">
+      <h1>Welcome to the Events page!</h1>
+      <p>This is still under construction.</p>
+    </div>
 
-    <div class="container" id="footbar"></div>
+    <div id="footbar"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript">
