--- a/games.html
+++ b/games.html
@@ -36,7 +36,7 @@
               <a class="nav-link" id="navevents" href="events.html">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" aid="navgames" href="games.html">Games</a>
+              <a class="nav-link active" aria-current="page" id="navgames" href="games.html">Games</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="navfaq" href="faq.html">FAQ</a>
