--- a/hours.html
+++ b/hours.html
@@ -1,1 +1,73 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    
+
+    <title>The VR Center!</title>
+  </head>
+  <body>
+    <div class="container" id="navbar">
+    <nav class="navbar navbar-pills navbar-expand-lg navbar-dark fixed-top bg-dark">
+      <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Logo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" id="navindex" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navproducts" href="products.html">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navservices" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navevents" href="events.html">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navgames" href="games.html">Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navfaq" href="faq.html">FAQ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navprices" href="prices.html">Prices</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" id="navhours" href="hours.html">Hours</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    </div>
+
+    <h1>This is the FAQ Page!</h1>
+
+    <div class="container-fluid">
+      <h1>Welcome to the FAQ page!</h1>
+      <p>This is still under construction.</p>
+    </div>
+
+    <div id="footbar"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+      $(function(){
+        $("#footbar").load("footbar.html");
+      });
+    </script>
+  </body>
+</html>
 
