--- a/hours.html
+++ b/hours.html
@@ -53,10 +53,10 @@
     </nav>
     </div>
 
-    <h1>This is the FAQ Page!</h1>
+    <h1>This is the Hours Page!</h1>
 
     <div class="container-fluid">
-      <h1>Welcome to the FAQ page!</h1>
+      <h1>Welcome to the Hours page!</h1>
       <p>This is still under construction.</p>
     </div>
 
