--- a/hours.html
+++ b/hours.html
@@ -53,7 +53,14 @@
     </nav>
     </div>
 
+    <div>
+      background-color: blue;
+    </div>
+    
+
+
     <h1>This is the Hours Page!</h1>
+   
 
     <div class="container-fluid">
       <h1>Welcome to the Hours page!</h1>
