--- a/hours.html
+++ b/hours.html
@@ -52,6 +52,11 @@
       </div>
     </nav>
     </div>
+    <style>
+      body {
+        background-color: lightblue;
+      }
+      </style>
 
     <h1>This is the Hours Page!</h1>
 
@@ -70,4 +75,3 @@
     </script>
   </body>
 </html>
-
