--- a/hours.html
+++ b/hours.html
@@ -54,7 +54,7 @@
     </div>
     <style>
       body {
-        background-color: lightblue;
+        background-color: blue;
       }
       </style>
 
