--- a/hours.html
+++ b/hours.html
@@ -61,8 +61,16 @@
     <h1>This is the Hours Page!</h1>
 
     <div class="container-fluid">
+      <style>
+        background-color: blue;
+      </style>
       <h1>Welcome to the Hours page!</h1>
-      <p>This is still under construction.</p>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p>Our Current Operating Hours Are:</p>
+      <p> Mon-Fri: 11Am - 8PM </p>
+      <p> Sat & Sun: 11Am - 9Pm </p>
     </div>
 
     <div id="footbar"></div>
