--- a/hours.html
+++ b/hours.html
@@ -65,12 +65,10 @@
         background-color: blue;
       </style>
       <h1>Welcome to the Hours page!</h1>
-      <p></p>
-      <p></p>
-      <p></p>
       <p>Our Current Operating Hours Are:</p>
-      <p> Mon-Fri: 11Am - 8PM </p>
-      <p> Sat & Sun: 11Am - 9Pm </p>
+      <p> Mon-Thur: 11AM - 8PM </p>
+      <p> Fri & Sat: 11AM - 9PM </p>
+      <p> Sunday: 12PM - 6PM </p>
     </div>
 
     <div id="footbar"></div>
