--- a/hours.html
+++ b/hours.html
@@ -65,7 +65,7 @@
         background-color: blue;
       </style>
       <h1>Welcome to the Hours page!</h1>
-      <p>Our Current Operating Hours Are:</p>
+      <p><br><br><br><br><br>Our Current Operating Hours Are:</p>
       <p> Mon-Thur: 11AM - 8PM </p>
       <p> Fri & Sat: 11AM - 9PM </p>
       <p> Sunday: 12PM - 6PM </p>
