--- a/special.html
+++ b/special.html
@@ -56,11 +56,11 @@
     </nav>
     </div>
 
-    <h1>This is the Prices Page!</h1>
+    <h1>This is our Special Page!</h1>
 
     <div class="container-fluid">
-      <h1>Welcome to the Prices page!</h1>
-      <p>This is still under construction.</p>
+      <h1>Welcome to the Special page!</h1>
+      <p>This is how we are working to handle covid.</p>
     </div>
 
     <div id="footbar"></div>
