--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <div class="container">
           <h1 class="mt-5">This is the homepage</h1>
           <p class="lead">This is still a work in progress.</p>
+          <p> For Information on how we are handling Covid-19. Please click <a href="https://sdefaultio.github.io/special.html">HERE</a>.</p>
         </div>        
     </main>
 
