--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
       </div>
     </nav>
     </div>
+    <style>
+      body {
+        background-color: LawnGreen;
+      }
+      </style>
 
     <h1>This is the Homepage!</h1>
 
