--- a/events.html
+++ b/events.html
@@ -52,6 +52,11 @@
       </div>
     </nav>
     </div>
+    <style>
+      body {
+        background-color: springgreen;
+      }
+      </style>
 
     <h1>This is the Events Page!</h1>
 
