--- a/faq.html
+++ b/faq.html
@@ -52,6 +52,11 @@
       </div>
     </nav>
     </div>
+    <style>
+      body {
+        background-color: gold;
+      }
+      </style>
 
     <h1>This is the FAQ Page!</h1>
 
