--- a/games.html
+++ b/games.html
@@ -52,6 +52,11 @@
       </div>
     </nav>
     </div>
+    <style>
+      body {
+        background-color: magenta;
+      }
+      </style>
 
     <h1>This is the Games Page!</h1>
 
