--- a/prices.html
+++ b/prices.html
@@ -52,6 +52,11 @@
       </div>
     </nav>
     </div>
+    <style>
+      body {
+        background-color: limegreen;
+      }
+      </style>
 
     <h1>This is the Prices Page!</h1>
 
