--- a/products.html
+++ b/products.html
@@ -51,6 +51,11 @@
           </div>
         </nav>
     </div>
+    <style>
+      body {
+        background-color: orangered;
+      }
+      </style>
 
     <h1>These are products!</h1>
 
