--- a/services.html
+++ b/services.html
@@ -51,6 +51,11 @@
         </div>
       </nav>
   </div>
+  <style>
+    body {
+      background-color: salmon;
+    }
+    </style>
 
   <h1>This is services!</h1>
 
