--- a/special.html
+++ b/special.html
@@ -55,6 +55,11 @@
       </div>
     </nav>
     </div>
+    <style>
+      body {
+        background-color: firebrick;
+      }
+      </style>
 
     <h1>This is our Special Page!</h1>
 
