--- a/special.html
+++ b/special.html
@@ -64,8 +64,13 @@
     <h1>This is our Special Page!</h1>
 
     <div class="container-fluid">
-      <h1>Welcome to the Special page!</h1>
-      <p>This is how we are working to handle covid.</p>
+      <h1>We are currently open with the following measures in place:</h1>
+      <p><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1. Following all applicable guidelines set forth by local officials and/or health departments.</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2. Encouraging everyone to follow the <strong>6 Foot</strong> social distancing guidelines.</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3. Allowing only <strong>50</strong> customers at a time in the store (Phase 2 VA)</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. Placing hand sanitizer units throughout the store.</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 5. Increasing the frequency of cleaning and sanitizing all high--traffic common areas with an enhanced
+        focus on all touch points with <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; CDC-recommended cleaning agents. </p>
     </div>
 
     <div id="footbar"></div>
