--- a/special.html
+++ b/special.html
@@ -57,20 +57,31 @@
     </div>
     <style>
       body {
-        background-color: firebrick;
+        background-color: gray;
       }
       </style>
 
     <h1>This is our Special Page!</h1>
 
     <div class="container-fluid">
-      <h1>We are currently open with the following measures in place:</h1>
-      <p><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1. Following all applicable guidelines set forth by local officials and/or health departments.</p>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2. Encouraging everyone to follow the <strong>6 Foot</strong> social distancing guidelines.</p>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3. Allowing only <strong>50</strong> customers at a time in the store (Phase 2 VA)</p>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. Placing hand sanitizer units throughout the store.</p>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 5. Increasing the frequency of cleaning and sanitizing all high--traffic common areas with an enhanced
-        focus on all touch points with <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; CDC-recommended cleaning agents. </p>
+      <h1 style="background-color:gray;color:white;"><br>We are currently open with the following measures in place:</h1>
+
+      <p style="background-color:gray;color:white;"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1. Following all applicable guidelines set
+         forth by local officials and/or health departments.</p>
+      <p style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2. Encouraging everyone to follow the <strong>6 Foot
+      </strong> social distancing guidelines.</p>
+      <p style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3. Allowing only <strong>50</strong> customers 
+         at a time in the store (Phase 2 VA)</p>
+      <p style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. Placing hand sanitizer units throughout the 
+         store.</p>
+      <p style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 5. Increasing the frequency of cleaning and sanitizing
+          all high-traffic common areas with an enhanced focus on all touch points with <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+          CDC-recommended cleaning agents. </p>
+
+      <p style="background-color:gray;color:white;"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <Strong>HOURS:</Strong></p>
+      <P style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mon-Thur: 11AM - 8PM </P>
+      <P style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Fri & Sat: 11AM - 9PM </P>
+      <P style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Sunday: 12PM - 6PM </P>
     </div>
 
     <div id="footbar"></div>
