--- a/hours.html
+++ b/hours.html
@@ -47,6 +47,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" id="navhours" href="hours.html">Hours</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" id="navcontact" href="contact.html">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
