--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,8 @@
     <h1>This is our contact us Page!</h1>
 
     <div class="container-fluid">
-      <h1>Welcome to the Contact us page!</h1>
-      <p>This is still under construction.</p>
+      <h1 style="color:white;">Welcome to the Contact us page!</h1>
+      <p style="color:white;">This is still under construction.</p>
     </div>
 
     <div id="footbar"></div>
