--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,13 @@
               <a class="nav-link" id="navfaq" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" id="navprices" href="prices.html">Prices</a>
+              <a class="nav-link" id="navprices" href="prices.html">Prices</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="navhours" href="hours.html">Hours</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="navcontact" href="contact.html">Contact</a>
+              <a class="nav-link active" aria-current="page" id="navcontact" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
