--- a/services.html
+++ b/services.html
@@ -60,20 +60,30 @@
     }
     </style>
 
-  <h1>This is services!</h1>
+  <main class="flex-shrink-0">
+    <div class="container">
+        <h1 class="mt-5">Welcome to the Services page!</h1>
+        <p class="lead">This is still under construction.</p>
+    </div>
+  </main>
 
-  <div class="container-fluid">
-    <h1>Welcome to the Services page!</h1>
-    <p>This is still under construction.</p>
+  <div id="footbar">
+    <footer class="fixed-bottom bg-dark d-flex flex-wrap justify-content-between align-items-center py-3">
+        <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+          </a>
+          <span class="text-muted">&copy; 2021 Company, Inc</span>
+        </div>
+
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+          <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+          <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+          <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+        </ul>
+      </footer>
   </div>
 
-  <div id="footbar"></div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script type="text/javascript">
-    $(function(){
-      $("#footbar").load("footbar.html");
-    });
-  </script>
 </body>
 </html>
