Testing Margin and Padding

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
       }
     </style>
 
-    <main class="flex-shrink-0">
-        <div class="container">
-          <h1 class="mt-5">This is the homepage</h1>
+    <main>
+        <div class="container-fluid">
+          <h1 class="mt-5 py-2">This is the homepage</h1>
           <p class="lead">This is still a work in progress.</p>
           <p class="lead"> For Information on how we are handling Covid-19. Please click <a href="https://sdefaultio.github.io/special.html">HERE</a>.</p>
         </div>        
