--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </style>
 
     <main>
-        <div class="container-fluid mt-3 py-3">
+        <div class="container mt-5 py-3">
           <h1>This is the homepage</h1>
           <p class="lead">This is still a work in progress.</p>
           <p class="lead"> For Information on how we are handling Covid-19. Please click <a href="https://sdefaultio.github.io/special.html">HERE</a>.</p>
