--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@
       </style>
 
 
-     <main class="flex-shrink-0">
-        <div class="d-flex align-items-center">
+     <main>
+        <div class="d-flex align-items-center mt-5 py-3">
             <p style="background-color:gray;"></p>
             <h1>This is our contact us Page!</h1>
 
