--- a/games.html
+++ b/games.html
@@ -62,8 +62,8 @@
       </style>
 
 
-    <main class="flex-shrink-0">
-        <div class="container">
+    <main>
+        <div class="container mt-5 py-3">
             <h1 class="mt-5">Welcome to the Games page!</h1>
             <p class="lead">This is still under construction.</p>
         </div>
