--- a/hours.html
+++ b/hours.html
@@ -64,8 +64,8 @@
 
 
 
-    <main class="flex-shrink-0">
-      <div class="d-flex align-items-center">
+    <main>
+      <div class="d-flex align-items-center mt-5 py-3">
         <style>
             background-color: blue;
         </style>
