--- a/special.html
+++ b/special.html
@@ -62,8 +62,8 @@
       </style>
 
 
-      <main class="flex-shrink-0">
-        <div class="d-flex align-items-center">
+      <main>
+        <div class="d-flex align-items-center mt-5 py-3">
           <h1>This is our Special Page!</h1>
 
           <h1 style="background-color:gray;color:white;"><br>We are currently open with the following measures in place:</h1>
