--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <main>
         <div class="container mt-5 py-3">
-          <h1>This is the homepage</h1>
+          <h1 class="mt-5">This is the homepage</h1>
           <p class="lead">This is still a work in progress.</p>
           <p class="lead"> For Information on how we are handling Covid-19. Please click <a href="https://sdefaultio.github.io/special.html">HERE</a>.</p>
         </div>        
