--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
      <main>
         <div class="d-flex align-items-center mt-5 py-3">
             <p style="background-color:gray;"></p>
-            <h1>This is our contact us Page!</h1>
+            <h1 class="mt-5">This is our contact us Page!</h1>
 
             <h1 style="color:white;"><br><br><br><strong>VR CENTER LLC!</strong></h1>
             <p style="color:white;">thevrcenter.net</p>
