--- a/special.html
+++ b/special.html
@@ -64,26 +64,26 @@
 
       <main>
         <div class="d-flex align-items-center mt-5 py-3">
-          <h1>This is our Special Page!</h1>
+          <h1 class="mt-5">This is our Special Page!</h1>
 
           <h1 style="background-color:gray;color:white;"><br>We are currently open with the following measures in place:</h1>
 
-          <p style="background-color:gray;color:white;"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 1. Following all applicable guidelines set
+          <p style="background-color:gray;color:white;"><br>1. Following all applicable guidelines set
              forth by local officials and/or health departments.</p>
-          <p style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2. Encouraging everyone to follow the <strong>6 Foot
+          <p style="background-color:gray;color:white;">2. Encouraging everyone to follow the <strong>6 Foot
           </strong> social distancing guidelines.</p>
-          <p style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3. Allowing only <strong>50</strong> customers 
+          <p style="background-color:gray;color:white;">3. Allowing only <strong>50</strong> customers 
              at a time in the store (Phase 2 VA)</p>
-          <p style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 4. Placing hand sanitizer units throughout the 
+          <p style="background-color:gray;color:white;">4. Placing hand sanitizer units throughout the 
              store.</p>
-          <p style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 5. Increasing the frequency of cleaning and sanitizing
+          <p style="background-color:gray;color:white;">5. Increasing the frequency of cleaning and sanitizing
               all high-traffic common areas with an enhanced focus on all touch points with <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
               CDC-recommended cleaning agents. </p>
 
-          <p style="background-color:gray;color:white;"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <Strong>HOURS:</Strong></p>
-          <P style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mon-Thur: 11AM - 8PM </P>
-          <P style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Fri & Sat: 11AM - 9PM </P>
-          <P style="background-color:gray;color:white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Sunday: 12PM - 6PM </P>
+          <p style="background-color:gray;color:white;"><br><Strong>HOURS:</Strong></p>
+          <P style="background-color:gray;color:white;">Mon-Thur: 11AM - 8PM </P>
+          <P style="background-color:gray;color:white;">Fri & Sat: 11AM - 9PM </P>
+          <P style="background-color:gray;color:white;">Sunday: 12PM - 6PM </P>
         </div>
       </main>
 
