--- a/hours.html
+++ b/hours.html
@@ -70,10 +70,13 @@
             background-color: blue;
         </style>
         <h1 class="mt-5" style="color:white;">Welcome to the Hours page!</h1>
-        <p class="text-center" style="background-color:gray;color:white;"><strong>Our Current Operating Hours Are:</strong></p>
-        <p class="text-center" style="background-color:gray;color:white;"><strong>Mon-Thur 11AM - 8PM </strong></p>
-        <p class="text-center" style="background-color:gray;color:white;"><strong>Fri & Sat: 11AM - 9PM </strong></p>
-        <p class="text-center" style="background-color:gray;color:white;"><strong>Sunday: 12PM - 6PM </strong></p>
+        
+        <p style="background-color:gray;color:white;">
+            <strong>Our Current Operating Hours Are:</strong><br>
+            <strong>Mon-Thur 11AM - 8PM </strong><br>
+            <strong>Fri & Sat: 11AM - 9PM </strong><br>
+            <strong>Sunday: 12PM - 6PM </strong>
+        </p>
       </div>
     </main>
 
